--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     def nav_version = "2.3.0"
-
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
@@ -68,7 +67,35 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    def hilt_lifecycle_viewmodel = "1.0.0-alpha02"
+    def hilt_androidx_version = "1.0.0-alpha02"
 
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_viewmodel"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_androidx_version"
+    kapt "androidx.hilt:hilt-compiler:$hilt_androidx_version"
+
+    def rx_java_version = "3.0.6"
+
+    implementation "io.reactivex.rxjava3:rxjava:$rx_java_version"
+
+    def rx_java_android_version = "3.0.0"
+
+    implementation "io.reactivex.rxjava3:rxandroid:$rx_java_android_version"
+
+    def rx_kotlin_version = "3.0.0"
+
+    implementation "io.reactivex.rxjava3:rxkotlin:$rx_kotlin_version"
+
+    def retrofit_rxjava3_adapter_version = "2.9.0"
+
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_rxjava3_adapter_version"
+
+    def timber_version = "4.7.1"
+
+    implementation "com.jakewharton.timber:timber:$timber_version"
+
+    def retrofit_version = "2.9.0"
+    def retrofit_interceptor_version = "4.8.1"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$retrofit_interceptor_version"
 }
